[package]
authors = ["Nicolas Schodet <nico@ni.fr.eu.org>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Board Support Crate for the 1Bitsy"
keywords = ["arm", "cortex-m", "stm32", "1bitsy"]
license = "MIT OR Apache-2.0"
name = "onebitsy"
repository = "https://github.com/1Bitsy/1bitsy-rust"
version = "0.1.0"

[dependencies]
stm32f40x = "0.2.1"

[dev-dependencies]
cortex-m = "0.3.0"
cortex-m-semihosting = "0.2.0"

[dev-dependencies.cortex-m-rt]
features = ["abort-on-panic"]
version = "0.3.2"

[profile.release]
lto = true
debug = true
